--- a/02-CSS/homework/responsive-web/index.html
+++ b/02-CSS/homework/responsive-web/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -18,11 +20,22 @@
 <body>
 
   <!-- Código del nav acá -->
+  <nav>
+    <h2> Música 8D </h2>
+    <Ul> 
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Sobre Nosotros</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contacto</a></li>
+      <li><a href="#">Registrarse</a></li>
+    </Ul>
+  </nav>
 
   <div class="container home">
 
     <header class="intro">
       <!-- Código de header img acá -->
+      <img src="./img/main-header.png" alt="Img not found">
 
       <h2>Nueva tecnología</h2>
 
