--- a/04-Ajax/homework/index.html
+++ b/04-Ajax/homework/index.html
@@ -13,14 +13,14 @@
   </ul>
 
   <h2>Ver Amigos</h2>
-  <img src='https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif' />
+  <!-- <img src='https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif' /> -->
   <hr>
-  <input id='input'></input>
+  <input id='input' type="number"></input>
   <button id='search'>Buscar</button>
   <span id='amigo'></span>
 
   <hr>
-  <input id='inputDelete'></input>
+  <input id='inputDelete' type="number"></input>
   <button id='delete'>Delete</button>
   <span id='success'></span>
   <script src="index.js"></script>
